Changes

from version 1.39 to 1.40

improvements:
- improved display of decimals in tooltip of sensor data diagram


from version 1.38 to 1.39

improvements:
- output the last used SIX for existing sensor data
- new diagram context menu to hide/show notes

bugfix:
- notes for existing sensor data were not always loaded


from version 1.37 to 1.38

bugfix:
- trying to add a note in an empty sensor data diagram could lead to a crash


from version 1.36 to 1.37

improvement:
- for loaded sensor data the temperature correction can be undone if the
  displayed value unit is set to nA

bugfix:
- some experts settings were incorrectly enabled when they were not applicable 


from version 1.35 to 1.36

bugfix:
- the menu to get the firmware version was broken


from version 1.34 to 1.35

bugfix:
- fix bug on reading notes that have a trailing line ending
  (for existing measurements the error message cannot be avoided
   but can be ignored)

   
from version 1.33 to 1.34

improvements:
- notes can now directly be changed by Ctrl+Click on a note
  (no need to zoom in anymore and Ctrl+Click on the data point the note
   is attached to)
- moving the mouse over a chart series brings it to top to make it (and
  its notes) fully visible

bugfixes:
- existing sensor data could not be opened or appended when it once had
  a note that was later deleted
- don't write to the .notes file when a note was edited but eventually
  not changed


from version 1.32 to 1.33

improvement:
- the SIX measurement start time is now displayed in the tab "General"

bugfixes:
- on some PCs the previews in the Windows taskbar were wrong
- fix (rather random) connection errors to pump driver


from version 1.31 to 1.32

improvements:
- support for pump drivers that have a unique ID
- last used minutes for scrolling view are stored for next program call

bugfix:
- when autoscale button was pressed while being in scrolling view
  the scrolling mode stopped working


from version 1.30 to 1.31
