@@ -4,7 +4,8 @@ from version 1.39 to 1.40
 
 improvements:
 - improved display of decimals in tooltip of sensor data diagram
-
+- when loading existing data, assure that data of at least
+  one channel is displayed
 
 from version 1.38 to 1.39
 
